// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WalletWidget Connected address is properly displayed 1`] = `
<div>
  <button
    class="MuiButtonBase-root-35 MuiButton-root-6 MuiButton-text-8 makeStyles-walletButton-4 MuiButton-textPrimary-9 MuiButton-disableElevation-17"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-7 makeStyles-walletButtonLabel-5"
    >
      0x1a..1a1a
    </span>
    <span
      class="MuiTouchRipple-root-38"
    />
  </button>
</div>
`;

exports[`WalletWidget Displays walletSelect menu upon click 1`] = `
<span
  class="svelte-1799bj2"
>
  MetaMask
   
</span>
`;

exports[`WalletWidget Renders correctly 1`] = `
<div>
  <button
    class="MuiButtonBase-root-35 MuiButton-root-6 MuiButton-outlined-11 makeStyles-walletButton-4 MuiButton-disableElevation-17"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-7 makeStyles-walletButtonLabel-5"
    >
      Connect
    </span>
    <span
      class="MuiTouchRipple-root-38"
    />
  </button>
</div>
`;

exports[`WalletWidget Renders mobile version correctly 1`] = `
<div>
  <button
    class="MuiButtonBase-root-35 MuiButton-root-6 MuiButton-text-8 makeStyles-walletButton-4 MuiButton-textPrimary-9 MuiButton-disableElevation-17"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-7 makeStyles-walletButtonLabel-5"
    >
      Connect
    </span>
    <span
      class="MuiTouchRipple-root-38"
    />
  </button>
</div>
`;
